# drf-project-template

./: .gitignore  README.md  code_deploy.sh  docker-compose.yaml  example.env  pyproject.toml  requirements.txt  run_tests.sh  web.Dockerfile  worker.Dockerfile
apps/common/: apis.py  serializers.py
apps/user/: admin.py  apis.py  apis_auth.py  helpers_auth.py  models.py  serializers.py  tests.py  urls.py
apps/user/migrations/: 0001_initial.py
conf/: settings.py  urls.py
config/: asgi.py  settings.py  urls.py  wsgi.py
prod/: secret_key_gen.py
